remove portal group things, use cleaner for PortalRenderInfo and misc changes